# fortran-maths

./: CMakeLists.txt  README.md  hpc_hello
cluster/: hosts.txt
fortran-maths/include/: matrix_operations.f90
fortran-maths/src/: utils.f90
include/: matrix_operations.f90  utils.f90
scr/: mpi-run.sh
src/: diagonalization.f90  hpc_hello.f90  matrix_multiply.f90
